# django_last

./: README.md  pyproject.toml  requirements.txt
diploma-frontend/swagger/: swagger.yaml
megano/: db.sqlite3
megano/accounts/: api.py  models.py  serializers.py  urls.py  views.py
megano/accounts/migrations/: 0001_initial.py
megano/api/: admin.py  models.py  serializers.py  urls.py  views.py
megano/api/migrations/: 0001_initial.py
megano/basket/: api.py  views.py
megano/cart/: urls.py
megano/catalog/: admin.py  api.py  models.py  serializers.py  urls.py  views.py
megano/catalog/migrations/: 0001_initial.py  0002_rename_name_product_title_remove_category_name_and_more.py
megano/megano/: settings.py  urls.py
megano/orders/: api.py  views.py
megano/payment/: api.py  views.py
megano/product/: models.py  serializers.py  urls.py  views.py
megano/shop/: admin.py  models.py  serializers.py  urls.py  views.py
megano/shop/migrations/: 0004_banner.py
