[project]
name = "python-django-diploma"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitrii",email = "spakez31122@mail.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "django (==5.2.3)",
    "djangorestframework (==3.16.0)",
    "pillow (==11.3.0)",
    "requests (==2.32.4)",
    "httpx (==0.28.1)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)",
    "ruff (>=0.12.2,<0.13.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "django-debug-toolbar (>=6.0.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false


[tool.ruff]
line-length = 110
target-version = "py312"


[tool.ruff.lint]
select = ["I", "F", "E", "D"]
ignore = ["D105", "D106", "D107"]



